--- a/style.css
+++ b/style.css
@@ -7,21 +7,35 @@ body{
 
 h1{
     margin: 1rem;
-    color: lightgrey;
+    color: white;
     box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.6), 0 10px 30px 0 rgba(0, 0, 0, 0.19);
     background-color: rgba(127,219,204,255);    ;
     border-radius: 50px; 
     font-family: 'Luckiest Guy', cursive;
     text-shadow: 2px 2px 4px #000000;
     border: 5px solid darkgrey;
+    width: 60%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
             
 }
 
-p{
+.transbox{
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 40%;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    
+}
+
+.transbox p{
+    color: #000000;
+    font-size: 18px;
     margin-top: 2rem;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
-    font-size: 18px;
     
 }
 
