--- a/style.css
+++ b/style.css
@@ -22,12 +22,13 @@ h1{
 }
 
 .transbox{
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(200, 200, 200, 0.5);
     width: 40%;
     display: block;
     margin-right: auto;
     margin-left: auto;
-    
+    border-radius: 20px;
+           
 }
 
 .transbox p{
@@ -61,8 +62,8 @@ img{
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.6), 0 10px 30px 0 rgba(0, 0, 0, 0.19);
-    width: auto;
-    height: 300px;
+    width: 500px;
+    height: 500px;
     object-fit: cover;
 
 }
