--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     background-size: cover;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
+    
 }
 
 h1{
@@ -28,7 +29,7 @@ h1{
     margin-right: auto;
     margin-left: auto;
     border-radius: 20px;
-           
+               
 }
 
 .transbox p{
@@ -37,6 +38,8 @@ h1{
     margin-top: 2rem;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
+    padding-top: 10px;
+    padding-bottom: 10px;
     
 }
 
